[package]
name = "service_discovery_rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
zmq = "0.10"
anyhow = "1"

[[bin]]
name = "receiver"
path = "src/bin/receiver.rs"

[[bin]]
name = "sender"
path = "src/bin/sender.rs"

